// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sidebar shell snapshots > renders the collapsed rail after the crossfade settles, in place 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root collapsed railIn quietBars"
    style=""
  >
    <div
      class="logoRow"
      data-dsh-drag-region=""
    >
      <button
        aria-label="Open sidebar"
        class="iconButton toggle"
        type="button"
      >
        <span
          aria-hidden="true"
          class="railMark"
        >
          <div
            data-slot="sidebar.brand.mark"
            style="display: contents;"
          >
            <svg
              aria-hidden="true"
              data-content="965fe321"
              fill="none"
              height="17.6580310880829"
              viewBox="0 0 23.16 17.04"
              width="24"
            />
          </div>
        </span>
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <div
      class="sectionRail"
    >
      <button
        aria-label="Home"
        class="iconButton sectionRailTab"
        type="button"
      >
        <svg
          data-content="de4e7ff8"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
      <button
        aria-label="Code"
        class="iconButton sectionRailTab sectionRailActive"
        type="button"
      >
        <svg
          data-content="ae283ba4"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
      <button
        aria-label="Work"
        class="iconButton sectionRailTab"
        type="button"
      >
        <svg
          data-content="d7e1059e"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
      <button
        aria-label="Team"
        class="iconButton sectionRailTab"
        type="button"
      >
        <svg
          data-content="7884c999"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="New session"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="18"
        viewBox="0 0 16 16"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
    <div
      class="regionArea"
    >
      <div
        aria-hidden="true"
        class="sectionPane sectionPaneHidden"
      >
        <div
          data-slot="sidebar.section"
          style="display: contents;"
        />
      </div>
      <div
        class="sectionPane sectionPaneActive"
      >
        <div
          data-slot="sidebar.section"
          style="display: contents;"
        />
      </div>
      <div
        aria-hidden="true"
        class="sectionPane sectionPaneHidden"
      >
        <div
          data-slot="sidebar.section"
          style="display: contents;"
        />
      </div>
      <div
        aria-hidden="true"
        class="sectionPane sectionPaneHidden"
      >
        <div
          data-slot="sidebar.section"
          style="display: contents;"
        />
      </div>
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column (wordmark, capsule, empty holes) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
      data-dsh-drag-region=""
    >
      <button
        aria-label="New session"
        class="brand wide"
        type="button"
      >
        <span
          aria-hidden="true"
          class="brandIdentity"
        >
          <span
            class="brandMark"
          >
            <div
              data-slot="sidebar.brand.mark"
              style="display: contents;"
            >
              <svg
                aria-hidden="true"
                data-content="965fe321"
                fill="none"
                height="17.6580310880829"
                viewBox="0 0 23.16 17.04"
                width="24"
              />
            </div>
          </span>
          <span
            class="brandName"
          >
            <div
              data-slot="sidebar.brand.name"
              style="display: contents;"
            >
              <span
                class="fallbackBrandName"
              >
                DSH Local Build
              </span>
              <span
                class="buildRevision"
              >
                abc1234
              </span>
            </div>
          </span>
        </span>
      </button>
      <button
        aria-label="Collapse sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <div
      class="sectionTabs"
      role="tablist"
    >
      <button
        aria-selected="false"
        class="sectionTab"
        role="tab"
        type="button"
      >
        <svg
          data-content="de4e7ff8"
          fill="none"
          height="14"
          viewBox="0 0 16 16"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="sectionTabLabel"
        >
          Home
        </span>
      </button>
      <button
        aria-selected="true"
        class="sectionTab sectionTabActive"
        role="tab"
        type="button"
      >
        <svg
          data-content="ae283ba4"
          fill="none"
          height="14"
          viewBox="0 0 16 16"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="sectionTabLabel"
        >
          Code
        </span>
      </button>
      <button
        aria-selected="false"
        class="sectionTab"
        role="tab"
        type="button"
      >
        <svg
          data-content="d7e1059e"
          fill="none"
          height="14"
          viewBox="0 0 16 16"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="sectionTabLabel"
        >
          Work
        </span>
      </button>
      <button
        aria-selected="false"
        class="sectionTab"
        role="tab"
        type="button"
      >
        <svg
          data-content="7884c999"
          fill="none"
          height="14"
          viewBox="0 0 16 16"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="sectionTabLabel"
        >
          Team
        </span>
      </button>
    </div>
    <button
      aria-label="New session"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="14"
        viewBox="0 0 16 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        New Session
      </span>
    </button>
    <div
      class="regionArea"
    >
      <div
        aria-hidden="true"
        class="sectionPane sectionPaneHidden"
      >
        <div
          data-slot="sidebar.section"
          style="display: contents;"
        />
      </div>
      <div
        class="sectionPane sectionPaneActive"
      >
        <div
          data-slot="sidebar.section"
          style="display: contents;"
        />
      </div>
      <div
        aria-hidden="true"
        class="sectionPane sectionPaneHidden"
      >
        <div
          data-slot="sidebar.section"
          style="display: contents;"
        />
      </div>
      <div
        aria-hidden="true"
        class="sectionPane sectionPaneHidden"
      >
        <div
          data-slot="sidebar.section"
          style="display: contents;"
        />
      </div>
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column in the default locale (zh, no setLocale) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
      data-dsh-drag-region=""
    >
      <button
        aria-label="新建会话"
        class="brand wide"
        type="button"
      >
        <span
          aria-hidden="true"
          class="brandIdentity"
        >
          <span
            class="brandMark"
          >
            <div
              data-slot="sidebar.brand.mark"
              style="display: contents;"
            >
              <svg
                aria-hidden="true"
                data-content="965fe321"
                fill="none"
                height="17.6580310880829"
                viewBox="0 0 23.16 17.04"
                width="24"
              />
            </div>
          </span>
          <span
            class="brandName"
          >
            <div
              data-slot="sidebar.brand.name"
              style="display: contents;"
            >
              <span
                class="fallbackBrandName"
              >
                DSH Local Build
              </span>
              <span
                class="buildRevision"
              >
                abc1234
              </span>
            </div>
          </span>
        </span>
      </button>
      <button
        aria-label="收起侧边栏"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <div
      class="sectionTabs"
      role="tablist"
    >
      <button
        aria-selected="false"
        class="sectionTab"
        role="tab"
        type="button"
      >
        <svg
          data-content="de4e7ff8"
          fill="none"
          height="14"
          viewBox="0 0 16 16"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="sectionTabLabel"
        >
          首页
        </span>
      </button>
      <button
        aria-selected="true"
        class="sectionTab sectionTabActive"
        role="tab"
        type="button"
      >
        <svg
          data-content="ae283ba4"
          fill="none"
          height="14"
          viewBox="0 0 16 16"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="sectionTabLabel"
        >
          代码
        </span>
      </button>
      <button
        aria-selected="false"
        class="sectionTab"
        role="tab"
        type="button"
      >
        <svg
          data-content="d7e1059e"
          fill="none"
          height="14"
          viewBox="0 0 16 16"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="sectionTabLabel"
        >
          工作
        </span>
      </button>
      <button
        aria-selected="false"
        class="sectionTab"
        role="tab"
        type="button"
      >
        <svg
          data-content="7884c999"
          fill="none"
          height="14"
          viewBox="0 0 16 16"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="sectionTabLabel"
        >
          团队
        </span>
      </button>
    </div>
    <button
      aria-label="新建会话"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="14"
        viewBox="0 0 16 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        新会话
      </span>
    </button>
    <div
      class="regionArea"
    >
      <div
        aria-hidden="true"
        class="sectionPane sectionPaneHidden"
      >
        <div
          data-slot="sidebar.section"
          style="display: contents;"
        />
      </div>
      <div
        class="sectionPane sectionPaneActive"
      >
        <div
          data-slot="sidebar.section"
          style="display: contents;"
        />
      </div>
      <div
        aria-hidden="true"
        class="sectionPane sectionPaneHidden"
      >
        <div
          data-slot="sidebar.section"
          style="display: contents;"
        />
      </div>
      <div
        aria-hidden="true"
        class="sectionPane sectionPaneHidden"
      >
        <div
          data-slot="sidebar.section"
          style="display: contents;"
        />
      </div>
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;
